[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/enemies/slimes/slime/slime.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/slimes/slime/slime_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/slimes/slime/slime_gibs_material.tres" type="Material" id=3]
[ext_resource path="res://scenes/enemies/slimes/slime/gibs/gib_0.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/slimes/slime/gibs/gib_1.png" type="Texture" id=5]
[ext_resource path="res://scenes/enemies/slimes/slime/gibs/gib_2.png" type="Texture" id=6]
[ext_resource path="res://scenes/enemies/slimes/slime/gibs/gib_3.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemies/slimes/audio/slime_die.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 128, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 160, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 224, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 96, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 128, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 32, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 64, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 96, 25, 32, 25 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=23]
radius = 6.23036

[sub_resource type="CircleShape2D" id=24]
radius = 259.055

[sub_resource type="Animation" id=25]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Gibs/Gibs1:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.39861 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gibs/Gibs2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.39861 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gibs/Gibs3:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.39861 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gibs/Gibs4:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.39861 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 8 ]
}

[sub_resource type="Animation" id=26]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=27]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "slide" ]
}

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "idle"

[node name="CollisionPolygon" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 1.04953, 1 )
shape = SubResource( 23 )

[node name="DetectionArea" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 24 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )

[node name="Gibs" type="Node2D" parent="."]

[node name="Gibs1" type="Particles2D" parent="Gibs"]
emitting = false
amount = 4
lifetime = 60.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 4 )

[node name="Gibs2" type="Particles2D" parent="Gibs"]
emitting = false
amount = 4
lifetime = 60.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 5 )

[node name="Gibs3" type="Particles2D" parent="Gibs"]
emitting = false
amount = 4
lifetime = 60.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 6 )

[node name="Gibs4" type="Particles2D" parent="Gibs"]
emitting = false
amount = 4
lifetime = 60.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 7 )

[node name="Audio" type="Node2D" parent="."]

[node name="DeathSoundPlayer" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 8 )
attenuation = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 25 )
anims/idle = SubResource( 26 )
anims/slide = SubResource( 27 )

[node name="WanderingTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="timeout" from="WanderingTimer" to="." method="_on_WanderingTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
